# oversight

./: .env.example  .gitignore  CHANGELOG.md  CNAME  Caddyfile  Dockerfile  LICENSE  README.md  SESSION_RESUME.md  about.html  bench_usenix.py  docker-compose.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: opsec.yml
blog/: anti-stripping.html  building-oversight.html  index.html  l3-integration.html  l3-safety-gui.html  mobile-beta.html  one-verification-core.html  post-quantum.html  python-to-rust.html  registry-federation-conformance.html  rekor-v2-migration.html  rust-registry-hybrid-watermark-progress.html  security-hardening.html  shipping-from-the-road.html  siem-export.html  v0.4.10-hardware-keys-foundation.html  watermark-layers.html
cli/: gui.py  oversight.py  oversight_rich.py
css/: style.css
demo/: index.html
docs/: EMBEDDING.md  HARDWARE_KEYS.md  OUTLOOK.md  REGISTRY_DEPLOYMENT.md  ROADMAP.md  RUNBOOK.md  SIEM.md  SPEC.md  V05_REKOR_PLAN.md  api-reference.html  architecture.html  cli-reference.html  gui.html  hardware-keys.html  index.html  performance.html  roadmap.html  security.md  watermark-resilience.html
docs/predicates/: registration-v1.md
docs/spec/: registry-v1.md
examples/: live_demo.py  live_demo_v2.py
integrations/: __init__.py  flywheel_oversight_match.py  perseus_canarykeeper.py
integrations/outlook/: README.md  manifest.xml  taskpane.html  taskpane.js
js/: nav.js
mobile/: index.html
oversight-rust/: Cargo.toml
oversight-rust/fuzz/: Cargo.toml  README.md
oversight-rust/fuzz/fuzz_targets/: container_parser.rs  manifest_parser.rs
oversight-rust/oversight-cli/: Cargo.toml
oversight-rust/oversight-cli/src/: main.rs
oversight-rust/oversight-container/: Cargo.toml
oversight-rust/oversight-container/src/: lib.rs
oversight-rust/oversight-crypto/: Cargo.toml
oversight-rust/oversight-crypto/src/: lib.rs
oversight-rust/oversight-formats/: Cargo.toml
oversight-rust/oversight-formats/src/: docx.rs  image.rs  lib.rs  pdf.rs  text.rs
oversight-rust/oversight-manifest/: Cargo.toml
oversight-rust/oversight-manifest/src/: lib.rs
oversight-rust/oversight-policy/: Cargo.toml
oversight-rust/oversight-policy/src/: lib.rs
oversight-rust/oversight-registry/: Cargo.toml
oversight-rust/oversight-registry/src/: auth.rs  db.rs  error.rs  main.rs  models.rs
oversight-rust/oversight-registry/src/routes/: attribute.rs  beacon.rs  dns_event.rs  evidence.rs  health.rs  mod.rs  query.rs  register.rs  semantic.rs  tlog.rs  well_known.rs
oversight-rust/oversight-rekor/: Cargo.toml
oversight-rust/oversight-rekor/examples/: conformance_helper.rs
oversight-rust/oversight-rekor/src/: lib.rs
oversight-rust/oversight-semantic/: Cargo.toml
oversight-rust/oversight-semantic/examples/: debug.rs
oversight-rust/oversight-semantic/src/: lib.rs  synonyms_v2_data.rs
oversight-rust/oversight-tlog/: Cargo.toml
oversight-rust/oversight-tlog/src/: lib.rs
oversight-rust/oversight-watermark/: Cargo.toml
oversight-rust/oversight-watermark/src/: lib.rs
oversight-rust/tests/: conformance_cross_lang.sh  conformance_rekor.sh
oversight_core/: __init__.py  beacon.py  container.py  crypto.py  decoy.py  ecc.py  fingerprint.py  l3_policy.py  manifest.py  policy.py  rekor.py  safe_io.py  semantic.py  siem.py  synonyms_v2.py  timestamp.py  tlog.py  watermark.py
oversight_core/formats/: __init__.py  docx.py  image.py  pdf.py  text.py
oversight_dns/: __init__.py  server.py
registry/: server.py
research/: index.html  performance-evaluation.html  protocol-design.html  threat-model.html  watermark-resilience.html
scripts/: opsec-scan.sh
scripts/githooks/: pre-commit
tests/: test_e2e.py  test_e2e_v2.py  test_gui_hardening_unit.py  test_hw_p256.py  test_l3_policy_unit.py  test_policy_unit.py  test_pq.py  test_registry_conformance.py  test_registry_unit.py  test_rekor_backcompat.py  test_rekor_e2e.py  test_rekor_unit.py  test_siem_unit.py  test_text_format_unit.py  test_tlog_unit.py
tools/: gen_hw_p256_sample.py  gen_hybrid_sample.py  test_hybrid_decrypt_node.mjs
viewer/: index.html  viewer.js
viewer/samples/: hello-alice-tampered.sealed  hello-alice.sealed  tutorial-hw-p256-identity.json  tutorial-hw-p256.sealed  tutorial-hybrid-identity.json  tutorial-hybrid.sealed  tutorial-identity.json  tutorial.sealed
