[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oversight-protocol"
version = "0.4.3"
description = "Open protocol for cryptographic data provenance, recipient attribution, and leak detection."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Zion Boggan", email = "zionboggan@gmail.com"},
]
keywords = ["watermark", "provenance", "attribution", "leak-detection", "cryptography", "post-quantum"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "cryptography>=42.0.0",
    "pynacl>=1.5.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
registry = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
]
formats = [
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "imagehash>=4.3.1",
]
all = ["oversight-protocol[registry,formats]"]

[project.scripts]
oversight = "cli.oversight_rich:main"

[project.urls]
Homepage = "https://oversight-protocol.github.io/oversight/"
Repository = "https://github.com/oversight-protocol/oversight"
Documentation = "https://oversight-protocol.github.io/oversight/docs/"
Issues = "https://github.com/oversight-protocol/oversight/issues"

[tool.setuptools.packages.find]
include = ["oversight_core*", "cli*", "registry*", "oversight_dns*"]
