[package]
name = "oversight-manifest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Signed canonical-JSON manifest for Oversight"

[dependencies]
oversight-crypto = { path = "../oversight-crypto" }
serde.workspace = true
serde_json.workspace = true
serde_jcs.workspace = true
hex.workspace = true
uuid.workspace = true
thiserror.workspace = true
