[package]
name = "oversight-tlog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "RFC 6962-compliant Merkle transparency log for Oversight"

[dependencies]
oversight-crypto = { path = "../oversight-crypto" }
ed25519-dalek.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
thiserror.workspace = true
serde_jcs.workspace = true

[dev-dependencies]
tempfile = "3"
